Fix seed track overflowing box

--- a/app/assets/stylesheets/dropdowns.scss
+++ b/app/assets/stylesheets/dropdowns.scss
@@ -6,7 +6,7 @@
 }
 
 .dropdown-trigger {
-  display: block;
+  @include display-flex;
   width: 100%;
 }
 
