--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -12,11 +12,14 @@
   background-color: $spotify-light;
 }
 
+.dropdown-trigger .button.track-button {
+  @include flex-grow(1);
+}
+
 .button.track-button {
   height: auto;
   padding-top: 0.75em;
   padding-bottom: 0.75em;
-  width: 100%;
   text-align: left;
 }
 
